--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.21"
+    ext.kotlin_version = "1.4.10"
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,8 +16,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter()
     }
 }
 
@@ -30,6 +28,7 @@ ext {
     rxBinding = '2.1.1'
     support = '28.0.0'
     dagger = '2.23.1'
-    room_version = '2.2.5'
+    arch = '2.2.5'
     koin_version = '2.2.0-rc-2'
+    room_version = '2.2.5'
 }
