--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,17 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    buildToolsVersion "30.0.2"
+
+    //Data Binding
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "com.example.expenseappmvvm"
@@ -31,7 +35,8 @@ android {
         develop {
             dimension "app"
             versionNameSuffix "-dev"
-            buildConfigField 'String', 'API_URL', '"https://my_api_url.com/"'
+            buildConfigField 'String', 'API_URL', '"https://api.exchangeratesapi.io/"'
+            buildConfigField 'String', 'BALANCE_NOTIFICATION_URL', '"http://10.0.2.2:3000/"'
         }
         mock {
             dimension "app"
@@ -48,57 +53,90 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    buildFeatures {
-        dataBinding = true
-    }
-
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://maven.google.com" }
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     //UI
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-    //DataBinding
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //KOIN
-    implementation "org.koin:koin-android:2.0.1"
-    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
-    implementation "org.koin:koin-android-architecture:0.9.1"
-    implementation 'androidx.room:room-runtime:2.3.0'
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
+    implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation "io.insert-koin:koin-androidx-scope:2.2.3"
+    implementation "io.insert-koin:koin-androidx-viewmodel:$rootProject.koin_version"
+    implementation "io.insert-koin:koin-androidx-fragment:$rootProject.koin_version"
+    implementation "io.insert-koin:koin-androidx-ext:$rootProject.koin_version"
 
     // lifecycle
     kapt 'androidx.lifecycle:lifecycle-compiler:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+
+    // Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+
+    //Data
+    implementation 'com.google.code.gson:gson:2.8.8'
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-rxjava2:2.3.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:common-java8:1.1.1"
+    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation "android.arch.lifecycle:reactivestreams:1.1.1"
+    implementation 'com.fatboyindustrial.gson-jodatime-serialisers:gson-jodatime-serialisers:1.2.0'
+
+    //Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     //Logging
-    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.7.1@aar'
-    implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.rxBinding"
-    implementation "com.jakewharton.rxbinding2:rxbinding-design:$rootProject.rxBinding"
-    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4:$rootProject.rxBinding"
-    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rootProject.rxBinding"
+    implementation "com.jakewharton.rxbinding2:rxbinding:2.1.1"
+    implementation "com.jakewharton.rxbinding2:rxbinding-design:2.1.1"
+    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1"
+    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1"
+    implementation 'com.github.tbruyelle:rxpermissions:0.11'
 
-    //Data
-    implementation 'com.google.code.gson:gson:2.8.5'
+    //Network
+    implementation "com.squareup.okhttp3:okhttp:4.1.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
